--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
       </div>
 	
 	  <div class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/bg_1.jpg)">
-			<!-- <div class="container"> -->
+			 <div class="container"> 
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
 						<!-- <h2>More projects on<span> Github  </span> </h2> -->
@@ -516,7 +516,7 @@
 						</div>
 					</div>
 				</div>
-			<!-- </div> -->
+			 </div> 
 		</div>
 	</section>
 
@@ -573,10 +573,10 @@
 		  <div class="container">
 			<br>
 			<br>
-			<div class="row justify-content-center">
+			<!-- <div class="row justify-content-center">
 				<div class="col-md-7 ftco-animate text-center">
 					<h2>Have a<span> Question?  </span> <a href="https://forms.gle/uLaTShUKXraAvHJ77" class="btn btn-primary py-3 px-5">Click Here</a> </h2>
-				</div>
+				</div> -->
 			</div>
 				<br>
 					<ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0">
